<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <Button
        android:id="@+id/bConectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conectar" />

    <TextView
        android:id="@+id/tvEstadoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estadoCliente" />

    <TextView
        android:id="@+id/tvChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat" />

    <EditText
        android:id="@+id/etMensajeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/escribeMensaje"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bEnviarMensajeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />
</LinearLayout>