<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bAccedeServidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accederServidor" />

    <Button
        android:id="@+id/bAccedeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accederCliente" />
</LinearLayout>