<?xml version="1.0" encoding="utf-8"?>
<!-- Ajusta vista para que el teclado y appbar no tapen el layout -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bIniciarServidor"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/iniciarServidor" />

        <TextView
            android:id="@+id/tvEstadoServidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estadoServidor"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Enviar mensaje -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMensajeServidor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:layout_weight="4"
                android:gravity="start|top"
                android:hint="@string/escribeMensaje"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/bEnviarMensajeServidor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/send"
                android:layout_height="wrap_content"
                android:text="@string/enviar" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>